commit al master del blogpost en su v mas reciente

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,3 +3,14 @@ body{
     color: blueviolet;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+#container
+{
+    width:70%;
+    padding:1em;
+    text-align:left;
+    border:1px solid #ddd;
+    margin:0 auto
+}
+#container h1{
+        font-size:20px
+    }
