Finalizada la head con diseño rosa

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,3 +14,16 @@ body{
 #container h1{
         font-size:20px
     }
+#cabecera{
+    background-color: pink;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+#cabecera #tagline
+{
+    padding:0 0 0 1em;
+    font-weight:400;
+    font-size:.8em
+}
